[package]
name = "spotifypi-control-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.3"
glib = "0.14.8"
tokio = { version = "1.13.0", features = ["full"] }
tokio-tungstenite = "0.16.0"
futures = "0.3.18"
futures-util = "0.3.18"
url = "2.2.2"
once_cell = "1.8.0"
regex = "1.5.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
